# siksha-data

./: .gitignore  README.md
admin/: .pre-commit-config.yaml  README.md  pyproject.toml
admin/src/siksha_admin/: __init__.py  auth.py  auth_utils.py  config.py  main.py  models.py  views.py
admin/src/siksha_admin/scripts/: init_admin_info.py
crawler/: .pre-commit-config.yaml  README.md  pyproject.toml
crawler/src/: categorizer.py  main.py  models.py  normalizer.py  registry.py
crawler/src/crawler/: base.py  snuco.py  snudorm.py  snuvet.py
crawler/src/resources/: menu_classifier_20250504.joblib  menu_dict.jsonl
crawler/tests/: conftest.py  dump_data.py  make_data.py  test_crawlers.py  update_dict.py
