[project]
name = "siksha-crawler"
version = "0.1.0"
description = "SNU Cafeteria Menu Crawler"
authors = []
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "mysql-connector-python>=8.0.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.6.0",
    "scikit-learn>=1.0.2",
    "joblib>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "ijson>=3.2.0",
]

[tool.rye.scripts]
check = "ruff check ."
format = "ruff format ."
check-fix = "ruff check --fix ."
update-dict = "python tests/update_dict.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".", "src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "PL", "RUF"]
ignore = [
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "W293",     # Blank line contains whitespace
    "PLR0912",  # Too many branches
]
per-file-ignores = { "tests/**/*.py" = ["E501"] }

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.hatch.build]
include = [
    "src/**/*.py",
] 